# mcp-verify

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: npm-release.yml  pypi-release.yml
src_node/: index.ts
src_py/mcp_squatguard_template/: server.py
src_py/mcp_verify/: server.py
